[package]
name = "mirseo_updrm"
version = "0.1.0"
edition = "2021"

[lib]
name = "nano_drm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.24.7", features = ["png"] }
lopdf = "0.31.0"
reed-solomon-erasure = "6.0.0"

[build-dependencies]
pyo3-build-config = "0.22.0"
